<resources>
    <string name="app_name">iBookShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_web_client_id" translatable="false">736124974687-6e9kphn2l9s5ah6s6lv59a57b25df98l.apps.googleusercontent.com</string>
    <string name="facebook_app_id">294905690202468</string>
    <string name="fb_login_protocol_scheme">fb294905690202468</string>
    <string name="menu_home">HOME</string>
    <string name="menu_tieuThuyet">Tiểu thuyết</string>
    <string name="menu_vienTuong">Viễn tưởng</string>
    <string name="menu_truyen">Truyện</string>
    <string name="menu_myBook">Sách của tôi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_item_cart">
        <u>Xoá khỏi giỏ hàng</u>.
    </string>

</resources>